--- a/src/components/cssCustom/customStyles.css
+++ b/src/components/cssCustom/customStyles.css
@@ -9,3 +9,65 @@
 .nav-item.active .nav-link {
   color: #FF2B06; /* Your desired color */
 }
+.card {
+  width: 30vw;
+}
+.ticket-wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.ticket-action{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 50px;
+}
+.ticket-input{
+  width: 100%;
+}
+.ticket-input input{
+  width: 70%;
+  height: 50px;
+  border: 0;
+  border-bottom: 1px solid gray;
+}
+.ticket-input input:focus{
+  outline: none;
+}
+.ticket-input p{
+  color: gray;
+
+}
+.modal-wrap{
+  z-index: 3;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 2; 
+}
+.checkboxes{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.checkboxes label > input{
+  margin-right: 10px;
+}
+.numbers-of-tickets{
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+}
+.numbers-of-tickets p{
+  font-weight: bold;
+}
