--- a/src/components/cssCustom/customStyles.css
+++ b/src/components/cssCustom/customStyles.css
@@ -21,6 +21,9 @@
   height: 650px;
   overflow: hidden; /* Adjust the height as needed */
 }
+.carousel-item-test {
+  height: 500px; /* Set the desired fixed height */
+}
 
 .carousel-item {
   height: 750px; /* Set the desired fixed height */
